[FIX] overflow

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -49,6 +49,7 @@
       height: calc((100vh - 300px)/10);
       box-sizing: border-box;
       white-space: nowrap;
+      overflow: hidden;
       display: flex;
       align-items: center;
 
